--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6",
     "react-pdf": "^5.7.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "swiper": "^8.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
