--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "html-react-parser": "^1.4.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.17.0",
     "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6",
     "react-pdf": "^5.7.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
