--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "simplebar-react": "^2.3.6",
-    "swiper": "^8.0.6",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
