--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.25.0",
     "html-react-parser": "^1.4.8",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.17.0",
     "react-icons": "^4.3.1",
