--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "html-react-parser": "^1.4.8",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-countup": "^6.1.1",
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.17.0",
     "react-icons": "^4.3.1",
