--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.18.5",
     "axios": "^0.25.0",
     "html-react-parser": "^1.4.8",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-countup": "^6.1.1",
